--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .scoreboard {
   width: 58%;
   margin: 10rem auto;
-  background-color: #0b5402;
+  background-color: navy;
   color: white;
   border-radius: 0.5rem;
   margin-top: 10rem;
@@ -34,11 +34,11 @@
 }
 
 .home {
-  background-color: #656565;
+  background-color: blue;
 }
 
 .away {
-  background-color: #af750a;
+  background-color: red;
 }
 
 .home__name,
@@ -101,6 +101,7 @@
   text-align: center;
   background-color: var(--black);
   margin-top: 1rem;
+  margin-bottom: 1rem;
   border-radius: 4px;
   padding: 1.6rem;
   border: 1px solid white;
@@ -110,13 +111,18 @@
   width: 50%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
+/* .homeButtons__touchdown, */
 .homeButtons__touchdown,
 .homeButtons__fieldGoal,
 .awayButtons__touchdown,
-.awayButtons__fieldGoal {
+.awayButtons__fieldGoal,
+.down__button,
+.yards__button,
+.ballOn__button,
+.quarter__button{
   margin: 1rem;
   border-radius: 4px;
-}
+};
